--- a/index.html
+++ b/index.html
@@ -1,11 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <title>Document</title>
+  </head>
+  <body>
+    <div id="main">
+      <div id="nav">
+        <h1>premier</h1>
+        <h2>Model</h2>
+        <h2>Women/Men</h2>
+        <h2>About/Blog/Information</h2>
+        <h2><i class="ri-search-line"></i></h2>
+      </div>
+      <div id="center">
+        <div id="content">
+          <video
+            src="./TRAVIS SCOTT [4K Edit] - Trim.mp4"
+            muted
+            autoplay
+            loop
+          ></video>
+          <div id="overlay">
+            <div id="over1">
+              <h1>Photography<br />and films</h1>
+              <h2>01</h2>
+            </div>
+            <div id="over2">
+              <h2>Explore</h2>
+              <img src="./icons8-arrow-100.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="scroll">
+        <div id="container">
+          <img src="./images/eminem.jpg" alt="" />
+          <img src="./images/mac_miller.jpg" alt="" />
+          <img src="./images/kanye west.jpg" alt="" />
+          <img src="./images/snoop.jpg" alt="" />
+          <img src="./images/tupac.jpg" alt="" />
+          <img src="./images/xxx.jpg" alt="" />
+          <img src="./images/kendrick.jpg" alt="" />
+        </div>
+        <div id="container">
+          <img src="./images/eminem.jpg" alt="" />
+          <img src="./images/mac_miller.jpg" alt="" />
+          <img src="./images/kanye west.jpg" alt="" />
+          <img src="./images/snoop.jpg" alt="" />
+          <img src="./images/tupac.jpg" alt="" />
+          <img src="./images/xxx.jpg" alt="" />
+          <img src="./images/kendrick.jpg" alt="" />
+        </div>
+      </div>
+      <div id="alphabets">
+        <h4>ALL</h4>
+        <h5>A</h5>
+        <h5>B</h5>
+        <h5>C</h5>
+        <h5>D</h5>
+        <h5>E</h5>
+        <h5>F</h5>
+        <h5>G</h5>
+        <h5>H</h5>
+        <h5>I</h5>
+        <h5>J</h5>
+        <h5>K</h5>
+        <h5>L</h5>
+        <h5>M</h5>
+        <h5>N</h5>
+        <h5>O</h5>
+        <h5>P</h5>
+        <h5>Q</h5>
+        <h5>R</h5>
+        <h5>S</h5>
+        <h5>T</h5>
+        <h5>U</h5>
+        <h5>V</h5>
+        <h5>W</h5>
+        <h5>X</h5>
+        <h5>Y</h5>
+        <h5>Z</h5>
+      </div>
+      <div id="page2">
+        <div id="left">
+          <img src="./images/kendrickvouge.jpg" alt="" />
+          <h2>VOUGE/SHOT</h2>
+        </div>
+        <div id="right">
+          <img src="./images/kendrickshow.jpg" alt="" />
+          <div id="rightbottom">
+            <h2>
+              Kendrick Lamar promised <br />
+              he'd tell some stories and performed
+            </h2>
+            <h3>
+              Kendrick Lamar promised he'd tell some stories and performed the
+              song everyone has been talking about during the Super Bowl
+              halftime show.Actor Samuel L. Jackson opened up the set dressed.
+            </h3>
+          </div>
+        </div>
+      </div>
+      <div id="page3">
+        <div id="pg3left">
+          <div class="circular-text">
+            <svg viewBox="0 0 200 200" width="200" height="200">
+              <defs>
+                <path
+                  id="circlePath"
+                  d="M 100, 100
+                     m -75, 0
+                     a 75,75 0 1,1 150,0
+                     a 75,75 0 1,1 -150,0"
+                />
+              </defs>
+              <text>
+                <textPath href="#circlePath" startOffset="0%">
+                  Interested in quality design? Follow me and be in touch
+                </textPath>
+              </text>
+            </svg>
+            <div class="center-arrow"><i class="ri-arrow-right-line"></i></div>
+          </div>
+          <div id="pg3-right-bottom">
+            <h2>
+              Donda 2 is the eleventh studio album by American rapper Kanye
+              West.
+            </h2>
+          </div>
+        </div>
+        <div id="pg3right">
+          <img src="./images/kanyeDonda.jpg" alt="" />
+        </div>
+      </div>
+      <div id="page4">
+        <img src="./images/collage.jpg" alt="" />
+      </div>
+    </div>
+  </body>
 </html>
